// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Design management index page designs does not render toolbar when there is no permission 1`] = `
<div>
  <!---->
   
  <div
    class="mt-4"
  >
    <ol
      class="list-unstyled row"
    >
      <li
        class="col-md-6 col-lg-4 mb-3"
      >
        <design-stub
          event="NONE"
          filename="design-1-name"
          id="design-1"
          image="design-1-image"
          notescount="0"
        />
         
        <!---->
      </li>
      <li
        class="col-md-6 col-lg-4 mb-3"
      >
        <design-stub
          event="NONE"
          filename="design-2-name"
          id="design-2"
          image="design-2-image"
          notescount="1"
        />
         
        <!---->
      </li>
      <li
        class="col-md-6 col-lg-4 mb-3"
      >
        <design-stub
          event="NONE"
          filename="design-3-name"
          id="design-3"
          image="design-3-image"
          notescount="0"
        />
         
        <!---->
      </li>
    </ol>
  </div>
   
  <router-view-stub
    name="default"
  />
</div>
`;

exports[`Design management index page designs renders designs list and header with upload button 1`] = `
<div>
  <header
    class="row-content-block border-top-0 p-2 d-flex"
  >
    <div
      class="d-flex justify-content-between align-items-center w-100"
    >
      <design-version-dropdown-stub />
       
      <div
        class="qa-selector-toolbar d-flex"
      >
        <gl-button-stub
          class="mr-2 js-select-all"
          variant="link"
        >
          Select all
        </gl-button-stub>
         
        <div>
          <delete-button-stub
            buttonclass="btn-danger btn-inverted mr-2"
            buttonvariant=""
          >
            
            Delete selected
            
            <!---->
          </delete-button-stub>
        </div>
         
        <upload-button-stub />
      </div>
    </div>
  </header>
   
  <div
    class="mt-4"
  >
    <ol
      class="list-unstyled row"
    >
      <li
        class="col-md-6 col-lg-4 mb-3"
      >
        <design-stub
          event="NONE"
          filename="design-1-name"
          id="design-1"
          image="design-1-image"
          notescount="0"
        />
         
        <input
          class="design-checkbox"
          type="checkbox"
        />
      </li>
      <li
        class="col-md-6 col-lg-4 mb-3"
      >
        <design-stub
          event="NONE"
          filename="design-2-name"
          id="design-2"
          image="design-2-image"
          notescount="1"
        />
         
        <input
          class="design-checkbox"
          type="checkbox"
        />
      </li>
      <li
        class="col-md-6 col-lg-4 mb-3"
      >
        <design-stub
          event="NONE"
          filename="design-3-name"
          id="design-3"
          image="design-3-image"
          notescount="0"
        />
         
        <input
          class="design-checkbox"
          type="checkbox"
        />
      </li>
    </ol>
  </div>
   
  <router-view-stub
    name="default"
  />
</div>
`;

exports[`Design management index page designs renders error 1`] = `
<div>
  <!---->
   
  <div
    class="mt-4"
  >
    <div
      class="alert alert-danger"
    >
      
      An error occurred while loading designs. Please try again.
    
    </div>
  </div>
   
  <router-view-stub
    name="default"
  />
</div>
`;

exports[`Design management index page designs renders loading icon 1`] = `
<div>
  <!---->
   
  <div
    class="mt-4"
  >
    <gl-loading-icon-stub
      color="orange"
      label="Loading"
      size="md"
    />
  </div>
   
  <router-view-stub
    name="default"
  />
</div>
`;

exports[`Design management index page when has no designs renders empty text 1`] = `
<div>
  <!---->
   
  <div
    class="mt-4"
  >
    <gl-empty-state-stub
      description="Upload and view the latest designs for this issue. Consistent and easy to find, so everyone is up to date."
      title="The one place for your designs"
    />
  </div>
   
  <router-view-stub
    name="default"
  />
</div>
`;
